; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_ieee.c_ieee_void_type.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_ieee.c_ieee_void_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee_handle = type { i32 }

@builtin_void = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @ieee_void_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ieee_void_type(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ieee_handle*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.ieee_handle*
  store %struct.ieee_handle* %5, %struct.ieee_handle** %3, align 8
  %6 = load %struct.ieee_handle*, %struct.ieee_handle** %3, align 8
  %7 = load i64, i64* @builtin_void, align 8
  %8 = trunc i64 %7 to i32
  %9 = load i32, i32* @FALSE, align 4
  %10 = load i32, i32* @FALSE, align 4
  %11 = call i32 @ieee_push_type(%struct.ieee_handle* %6, i32 %8, i32 0, i32 %9, i32 %10)
  ret i32 %11
}

declare dso_local i32 @ieee_push_type(%struct.ieee_handle*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
